--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -4,5 +4,6 @@
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "build",
-  "cordova": {}
+  "cordova": {},
+  "linuxAndroidStudioPath": "/snap/android-studio/82/android-studio/bin/studio.sh"
 }
