--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pilot-test",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "dependencies": {
     "@capacitor/android": "^1.5.0",
@@ -16,6 +16,8 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "cordova-plugin-ionic": "5.4.6",
+    "cordova-plugin-whitelist": "^1.3.4",
     "ionicons": "^4.6.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -46,7 +48,10 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "1.5.0"
+    "@capacitor/cli": "1.5.0",
+    "@types/classnames": "^2.2.9",
+    "classnames": "^2.2.6"
   },
-  "description": "Pilot test crossplatform app"
+  "description": "Pilot test crossplatform app",
+  "homepage": "./"
 }
