RemoveClass, change version number to v0.0.4

--- a/electron/package.json
+++ b/electron/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "capacitor-app",
-  "version": "1.0.0",
+  "name": "pilot-test",
+  "version": "0.0.4",
   "description": "An Amazing Capacitor App",
   "main": "index.js",
   "repository": {
